# billing-service

./: .env.template  .flake8  .gitignore  Makefile  README.md  Summary.md  docker-compose.local.yml  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  pytest-dc.yaml  variety_code_checker.yaml
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: index.tsx
frontend/src/App/: App.tsx
frontend/src/redux/: store.ts
infra/backend/: Dockerfile
infra/backend-test/: Dockerfile
infra/nginx/: Dockerfile
infra/nginx/configs/: site.conf
infra/scheduler/: Dockerfile
src/: .env.template  .env.test  alembic.ini
src/app/: main.py
src/app/core/: config.py
src/app/dependencies/: auth.py  main.py
src/app/exceptions/: __init__.py  auth.py  base.py  error_handlers.py  main.py
src/app/middleware/: main.py
src/app/models/: __init__.py  base.py  mixins.py  pay_status.py  pay_system.py  tariff.py  user_payment.py  user_subscription.py
src/app/providers/: admin_provider.py  cache_providers.py  http_providers.py  main.py  pg_providers.py
src/app/repositories/: base.py  pay_system.py  payment.py  payment_status.py  tariff.py  user_subscription.py
src/app/services/: auth.py  pay_system.py  payment.py  subscription.py  tariff.py
src/app/uow/: base.py  subscription_uow.py
src/migrations/: env.py
src/migrations/versions/: 2023-09-20_23-42_init_database.py  2023-09-20_23-43_add_status_dict.py  2023-09-25_16-34_add_tariff_and_pay_system.py  (+9 more)
src/scheduler/: container.py  main.py
src/shared/: settings.py
src/tests/: conftest.py
src/worker/: container.py  event_handler.py  main.py
(+122 files in other folders)
